--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,28 +1,28 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
     "allowJs": true,
     "checkJs": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "dist",
-    "rootDir": "src",
     "declaration": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["es6", "es2017"],
+    "module": "commonjs",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedParameters": true,
+    "outDir": "dist",
+    "resolveJsonModule": true,
+    "rootDir": "src",
+    "skipLibCheck": true,
+    "strict": true,
     "strictNullChecks": true,
-    "lib": ["es6", "es2017"],
+    "target": "ES6"
   },
-  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"],
+  "include": ["src/**/*.ts"],
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
