--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
+    "baseUrl": "src",
     "checkJs": true,
     "declaration": true,
     "esModuleInterop": true,
@@ -14,6 +15,11 @@
     "noImplicitThis": true,
     "noUnusedParameters": true,
     "outDir": "dist",
+    "paths": {
+      "@modules/*": ["modules/*"],
+      "@users/*": ["modules/users/*"],
+      "@shared/*": ["modules/shared/*"]
+    },
     "resolveJsonModule": true,
     "rootDir": "src",
     "skipLibCheck": true,
