--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
     "start:docker": "docker-compose up --build"
   },
   "keywords": [],
@@ -13,12 +13,13 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
-    "ts-node-dev": "^2.0.0",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "tsconfig-paths": "^4.2.0"
   }
 }
