--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
-    "start:docker": "docker-compose up --build"
+    "start:docker": "docker-compose up --build",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:up": "npm run typeorm migration:run -- -d ./ormconfig.ts",
+    "migration:down": "npm run typeorm migration:revert -- -d ./ormconfig.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +23,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "tsconfig-paths": "^4.2.0"
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.14",
+    "tsconfig-paths": "^4.2.0",
+    "typeorm": "^0.3.17"
   }
 }
