--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,9 @@
     "baseUrl": "src",
     "checkJs": true,
     "declaration": true,
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["es6", "es2017"],
     "module": "commonjs",
