--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
+    "@types/pg": "^8.10.9",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
@@ -24,7 +25,6 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.14",
     "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.17"
   }
