--- a/server/package.json
+++ b/server/package.json
@@ -8,15 +8,19 @@
     "start:docker": "docker-compose up --build",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:up": "npm run typeorm migration:run -- -d ./ormconfig.ts",
-    "migration:down": "npm run typeorm migration:revert -- -d ./ormconfig.ts"
+    "migration:down": "npm run typeorm migration:revert -- -d ./ormconfig.ts",
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
     "@types/pg": "^8.10.9",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
