--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   release:
-    name: Release test
+    name: Release
     runs-on: ubuntu-latest
     permissions:
       contents: write
