--- a/package.json
+++ b/package.json
@@ -1,22 +1,44 @@
 {
-  "name": "user-control",
-  "version": "1.1.0",
-  "description": "Aplicação para controles de usuários, os mesmos podem ser cadastrados com cpf e nome.",
-  "main": "index.js",
+  "name": "user-management",
+  "description": "Aplicação para gestão de usuários.",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "pre-push": "echo \"pre-push script\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "axios": "^1.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.43",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint": "^8.55.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
-    "semantic-release": "^22.0.12"
+    "semantic-release": "^22.0.12",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
